[package]
name = "emilaa-chess-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol", version = "0.1.0" }
freetype-rs = { git = "https://github.com/PistonDevelopers/freetype-rs", version = "0.33.0" }
gl = "0.14.0"
glfw = "0.53.0"
glm = "0.2.3"
lazy_static = "1.4.0"
ludviggl-chess = { git = "https://github.com/INDA23PlusPlus/ludviggl-chess", version = "0.1.0" }
serde = "1.0.188"
serde_json = "1.0.107"
stb_image_rust = "2.27.2"
